# macos-notifier

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cron.py  exceptions.py  macos_notifier.py  mypy.ini  notifier.py  pyproject.toml  setup.py
.github/workflows/: main.yml
src/: cron.py
tests/: test_create.py  test_cron.py
