[tool.poetry]
name = "notifier"
version = "1.0.0"
description = "MacOS custom notifications manager"
authors = ["Jani Šumak <jani.sumak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "7.1.2"
python-crontab = "2.5.1"
colorama = "0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
