[tool.poetry]
name = "macos_notifier"
version = "1.0.3"
description = "MacOS custom notifications manager"
authors = ["Jani Šumak <jani.sumak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "7.1.2"
python-crontab = "2.5.1"
colorama = "0.4.4"

[tool.poetry.dev-dependencies]
black = {version = "20.8b1", allow-prereleases = true}
pytest = "6.2.1"
pylint = "2.6.0"
pre-commit = "2.9.3"
rope = "0.18.0"
mypy = "0.790"
twine = "3.3.0"

[tool.poetry.scripts]
notifier = "macos_notifier:cli"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
